# kartographs

./: .clang-format  .gitignore  README.md  buildozer.spec  image_viewer.py  pyproject.toml
kartographs/: game.py  game_defs.py  kartographs.kv  kartographs.py  kartographs_callback.py  main.py
kartographs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
